--- a/src/Components/Footer.module.css
+++ b/src/Components/Footer.module.css
@@ -12,6 +12,7 @@
 
 .link_sect{
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
 }
 
@@ -28,12 +29,13 @@
 
 .contact_us{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
+    margin-top: 3rem;
 }
 
 .footer__text {
-    padding: 1rem 0;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     /* align-items: center; */
@@ -43,10 +45,16 @@
     text-decoration: none;
     color: rgb(77, 76, 76);
     display: flex;
+    margin: 0 1rem;
 }
 
-.contact_us a p{
-    margin-left: 1rem;
+.contact_us p{
+    display: none;
+}
+
+.contact_us svg{
+    /* color: rgb(77, 76, 76); */
+    fill: rgb(77, 76, 76);
 }
 
 .copy_rights{
@@ -61,3 +69,80 @@
 .copy_rights p{
     margin-bottom: 0;
 }  
+
+.footer__top{
+    margin-bottom: 5rem;
+}
+
+.footer__top p{
+    margin-top: -0.5rem;
+}
+
+@media (min-width: 992px) {
+    .footer__link{
+        display: flex;
+        flex-direction: column;
+        /* text-align: center; */
+        /* justify-content: flex-start; */
+    }
+    
+    .footer__link a{
+        text-decoration: none;
+        color: rgb(77, 76, 76);
+    }
+    
+    .link_sect{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    
+    
+    .footer__div{
+        margin-top: 4rem;
+        background-color: rgba(221, 221, 221, 0.5);
+    }
+    
+    /* .contact_enquiries{
+        margin-bottom: 1rem;
+        font-size: 0.8rem;
+    } */
+    
+    .contact_us{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: 0;
+    }
+    
+    .footer__text {
+        padding: 1rem 0;
+        display: flex;
+        flex-direction: column;
+        /* align-items: center; */
+    }
+    
+    .contact_us a{
+        text-decoration: none;
+        color: rgb(77, 76, 76);
+        display: flex;
+    }
+    
+    .contact_us a p{
+        display: block;
+        margin-left: 1rem;
+    }
+    
+    .copy_rights{
+        text-align: center;
+        background-color: rgb(77, 76, 76);
+        color: white;
+        margin: 0;
+        font-size: 0.6rem;
+        padding: 1rem 0;
+      }
+    
+    .copy_rights p{
+        margin-bottom: 0;
+    }  
+}
