--- a/src/Components/CartItem.module.css
+++ b/src/Components/CartItem.module.css
@@ -2,7 +2,7 @@
     /* padding: 1rem; */
     background-color: rgba(221, 221, 221, 0.5);
     margin: 1rem;
-    max-width: 340px;
+    max-width: 296px;
     transition: all 0.8s ease-in-out;
 }
 
@@ -10,6 +10,7 @@
     width: 100%;
     height: 200px;
     /* max-width: 340px; */
+    object-fit: cover;
 }
 
 .cartitem_name{
