--- a/src/Components/Navbar.module.css
+++ b/src/Components/Navbar.module.css
@@ -1,9 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto+Slab&display=swap');
 
 .mart_header{
-    /* background-color: rgb(199, 195, 195); */
     background-color: rgb(255, 255, 255);
-    /* box-shadow: 10px 10px 10px rgba(195, 195, 195, 0.5); */
     position: fixed;
     top: 0;
     left: 0;
@@ -55,13 +53,14 @@
     /* height: 100%; */
     text-align: center;
     position: fixed;
-    z-index: 100;
     width: 100%;
     background: white;
     padding: 1rem 0;
     opacity: 0;
-    transform: translateX(10%);
+    transform: translateX(-100%);
     transition: all 0.5s ease-in-out;
+    z-index: 1000;
+    /* display: none; */
 }
 
 .desktop__nav{
@@ -74,6 +73,8 @@
     /* display: block; */
     opacity: 1;
     transform: translateX(0%);
+    z-index: 100;
+    display: block;
 }
 
 .mobile_nav li{
@@ -189,6 +190,11 @@
         margin: 0 1rem;
     }
 
+    .logout__btn{
+        display: flex;
+        justify-content: space-between;
+    }
+
     /* .desktop__nav button {
         background: rgb(250, 22, 22);
         color: white;
@@ -197,7 +203,7 @@
         border-radius: 0.5rem;
     } */
 
-    .mart__link button{
+    .logout__btn button{
         background: rgb(250, 22, 22);
         color: white;
         border: none;
@@ -207,6 +213,12 @@
         height: 40px;
         width: 70px;
         margin: 0.5rem 2rem;
+    }
+
+    .logout__btn button:hover{
+        background-color: white;
+        border: 2px solid red;
+        color: red;
     }
 
     .mart_icon{
