--- a/src/Components/PayStack.module.css
+++ b/src/Components/PayStack.module.css
@@ -12,6 +12,14 @@
     padding: 1rem;
     border-radius: 10px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+    animation: payment 0.5s linear;
+    /* animation-iteration-count: 3; */
+    /* animation: name duration timing-function delay iteration-count direction fill-mode; */
+}
+
+.convert__text{
+  font-size: 0.6rem;
+  margin-top: -1rem;
 }
 
 .control {
@@ -46,7 +54,18 @@
     color: white;
     font-size: 1rem;
     border-radius: 0.2rem;
-    padding: 0.2rem;
+    padding: 0.5rem;
+    border: none;
+    /* transition: all 0.5s ease-in; */
+  }
+
+  .confirmBtn:hover{
+    background-color: rgb(5, 253, 87);
+  }
+
+  .confirmBtn:disabled{
+    background-color: rgb(157, 156, 156);
+    cursor: pointer;
   }
 
   .cancelBtn{
@@ -56,11 +75,17 @@
     margin-right: 1rem;
     font-size: 1rem;
     border-radius: 0.2rem;
-    padding: 0.2rem;
+    padding: 0.5rem;
+    border: none;
+    transition: all 0.5s ease-in;
+  }
+
+  .cancelBtn:hover{
+    background-color: #fe2727;
   }
 
   .confirmOrder{
-    margin-left: 18rem;
+    margin-left: 16rem;
     margin-top: 1rem;
     color: red;
   }
@@ -80,9 +105,23 @@
         padding: 1rem;
     }
 
-    .confirmOrder{
-        margin-left: 0rem;
-        margin-top: 1rem;
-        color: red;
-      }
+  .confirmOrder{
+      margin-left: 0rem;
+      margin-top: 1rem;
+      color: red;
+    }
   } 
+
+  @keyframes payment{
+    0%{
+      transform: scale(0);
+    }
+
+    50%{
+      transform: scale(0.5);
+    }
+
+    100%{
+      transform: scale(1);
+    }
+  }
