--- a/src/Components/SearchBar.module.css
+++ b/src/Components/SearchBar.module.css
@@ -4,7 +4,6 @@
     max-width: 650px;
     margin: 3rem auto;
     padding: 2rem auto;
-    /* z-index: 50; */
 }
 
 .search_field{
@@ -16,10 +15,9 @@
 
 .search_field:focus{
     outline: none;
-    /* border: 2px solid rgb(191, 22, 22); */
     border: 2px solid rgba(138, 137, 137, 0.5);
-}
+};
 
 ::placeholder{
     text-indent: 2.5rem;
-}
+};
